Added User management pge

--- a/superset-frontend/src/pages/Dashboard/Buttons.css
+++ b/superset-frontend/src/pages/Dashboard/Buttons.css
@@ -65,7 +65,7 @@
 }
 
 .icon {
-    width: 25px; /* Adjust icon size */
+     /* Adjust icon size */
     height: 25px;
     margin-right: 8px; /* Spacing between icon and text */
   }
