--- a/superset-frontend/src/features/home/ConnectToAPI.css
+++ b/superset-frontend/src/features/home/ConnectToAPI.css
@@ -1,130 +1,174 @@
 .popup-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Dark background */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-  
-  .popup-content {
-    background-color: white;
-    border-radius: 5px;
-    padding: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-  }
-  
-  .popup-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 10px;
-  }
-  
-  .popup-header h2 {
-    margin: 0;
-    font-size: 1.5rem;
-  }
-  
-  .close-button {
-    background: none;
-    border: none;
-    font-size: 1.2rem;
-    cursor: pointer;
-    padding: 5px;
-  }
-  
-  .popup-body {
-    margin-top: 20px;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  /* Dark background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
 
-  .url-input {
-    margin-bottom: 15px;
-  }
+.popup-content {
+  background-color: white;
+  border-radius: 5px;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
 
-  .table-input {
-    margin-bottom: 10px;
-  }
+.popup-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 10px;
+}
 
-  .input-button-wrapper {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .input-button-wrapper input {
-    width: 80%;
-    padding: 8px; /* Optional for better spacing */
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .input-button-wrapper button {
-    width: 20%;
-    padding: 10px; /* Optional for better spacing */
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-left: 5px;
-  }
-  
-  .url-input label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-  }
+.popup-header h2 {
+  margin: 0;
+  font-size: 1.5rem;
+}
 
-  .json-body {
-    height: 300px;
-    overflow-y: auto;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .json-body label {
-    display: block;
-    margin-bottom: 5px;
-    margin-top: 5px;
-    margin-left: 5px;
-    font-weight: bold;
-  }
-  
-  .json-body textarea {
-    width: 100%;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 10px;
-    resize: none;
-  }
-  
-  .popup-footer {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 20px;
-  }
-  
-  .popup-footer button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .popup-footer button:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-  }
-  
-  .error-message {
-    color: red;
-    margin-top: 10px;
-  }
-  
+.close-button {
+  background: none;
+  border: none;
+  font-size: 1.2rem;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.popup-body {
+  margin-top: 20px;
+}
+
+.url-input {
+  margin-bottom: 15px;
+}
+
+.auth-options {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.auth-options label {
+  align-items: center;
+  display: flex;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+.auth-options input {
+  margin-right: 10px; /* Adds space between the radio button and the text */
+}
+
+.table-input {
+  margin-bottom: 10px;
+}
+
+.input-button-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.input-button-wrapper input {
+  width: 80%;
+  padding: 8px;
+  /* Optional for better spacing */
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.input-button-wrapper button {
+  width: 20%;
+  padding: 10px;
+  /* Optional for better spacing */
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: 5px;
+}
+
+.url-input label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.json-body {
+  height: 300px;
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.json-body label {
+  display: block;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  margin-left: 5px;
+  font-weight: bold;
+}
+
+.json-body textarea {
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 10px;
+  resize: none;
+}
+
+.popup-footer-container {
+  display: flex;
+  justify-content: space-between;
+  /* Space between the Schedule and Upload buttons */
+  align-items: center;
+  margin-top: 20px;
+}
+
+.schedule-button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.schedule-button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.right-footer-buttons {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.right-footer-buttons button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: 10px;
+  /* Optional: Adds space between buttons if you add more later */
+}
+
+.right-footer-buttons button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.error-message {
+  color: red;
+  margin-top: 10px;
+}
