--- a/superset-frontend/src/pages/Dashboard/Buttons.css
+++ b/superset-frontend/src/pages/Dashboard/Buttons.css
@@ -6,7 +6,7 @@
     /* Arrange buttons vertically */
     align-items: center;
     /* Center align the buttons inside the container */
-    background-color: white;
+    background-color: #101838;
     /* Set the container background to white */
     padding: 10px;
     /* Add some padding to the container */
@@ -15,9 +15,12 @@
 
 .divider {
     width: 100%;
-    height: 5px; /* Set the height of the divider line */
-    background-color: #f7f7f7; /* Set the color of the line */
-    margin: 20px 0; /* Add space between the button container and user management */
+    height: 0.5px;
+    /* Set the height of the divider line */
+    background-color: #f7f7f7;
+    /* Set the color of the line */
+    margin: 20px 0;
+    /* Add space between the button container and user management */
 }
 
 .user-management {
@@ -28,7 +31,7 @@
     /* Arrange buttons vertically */
     align-items: center;
     /* Center align the buttons inside the container */
-    background-color: white;
+    background-color: #101838;
     /* Set the container background to white */
     padding: 10px;
     /* Add some padding to the container */
@@ -42,7 +45,7 @@
     /* Arrange buttons vertically */
     align-items: center;
     /* Center align the buttons inside the container */
-    background-color: white;
+    background-color: #101838;
     /* Set the container background to white */
     padding: 10px;
     /* Add some padding to the container */
@@ -56,7 +59,8 @@
     border-radius: 5px;
     font-size: 14px;
     /* Add some spacing between buttons */
-    background-color: white;
+    background-color: #101838;
+    color: #fff;
     border-right: 5px solid transparent;
     /* Default border color */
     border-color: transparent;
@@ -65,22 +69,23 @@
 }
 
 .icon {
-     /* Adjust icon size */
+    /* Adjust icon size */
     height: 25px;
-    margin-right: 8px; /* Spacing between icon and text */
-  }
+    margin-right: 8px;
+    filter: invert(100%) brightness(200%);
+
+}
 
 .button.active {
-    border-color: rgb(235,88,22);
-    color: rgb(235,88,22);
-    background-color: rgba(235, 88, 22, 0.30);
-    /* Highlight the active button */
+    background-color: #6964E3;
+    border-color: #6964E3;
+    color: #fff;
 }
 
 .button.active:hover {
-    border-color: rgb(235,88,22);
-    color: rgb(235,88,22);
-    background-color: rgba(235, 88, 22, 0.30);
+    background-color: #6964E3;
+    border-color: #6964E3;
+    color: #fff;
 }
 
 .button:hover {
@@ -89,9 +94,31 @@
 }
 
 
-
 .right-panel {
-    flex-grow: 1; /* Allow the right panel to expand */
-    background-color: #f4f4f4; /* Example background color */
+    background-color: #f4f4f4;
     padding-left: 3px;
-  }
+    width: 100vw;
+}
+
+.dashboard-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.dashboard-page {
+    flex: 0 0 60%;
+    /* 60% of total height */
+    overflow: auto;
+}
+
+.full-height {
+    flex: 1 0 100%; /* Full height when AlertList is not displayed */
+}
+
+.alert-list {
+    flex: 0 0 40%;
+    /* 40% of total height */
+    padding-left: 30px;
+    padding-right: 30px;
+}
