--- a/superset-frontend/src/pages/Dashboard/Bioreactor.css
+++ b/superset-frontend/src/pages/Dashboard/Bioreactor.css
@@ -8,6 +8,18 @@
   height: 400px;
 }
 
+.bioreactor-container .title-panel1 {
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  display: flex;
+  background-color: #fff;
+  align-items: flex-start;
+  justify-content: center;
+  font-size: 21px;
+  font-weight: 600;
+}
+
 .bioreactor-container .info-wrapper {
   display: flex;
   gap: 20px;
@@ -16,7 +28,9 @@
   padding: 20px;
   background-color: #fff;
   height: auto;
-  margin: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  
 }
 
 /* Two-column, three-row layout */
